test code modify

--- a/code/KoBERT_with_labeled_replace_target.ipynb
+++ b/code/KoBERT_with_labeled_replace_target.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-10 15:47:18.461749: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -24,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,15 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['타겟이 일하는 병원 절대 안간다.', '0'] \n",
-      " ['타겟는 보호할필요가없다...가능하면 최대한의 불이익을받도록 해야한다 아...국짐같은넘들.', '0'] \n",
+      "['후보교체뿐이다', '0'] \n",
+      " ['멋집니다~ 새해아침 운동 욕구 뿜뿜입니다~^^', '1'] \n",
       " ['타겟 사용자만 매타버스 타겟 시스템 으로 연결해도  독보적 일듯  이인원을 어떤 기업이 가져가나 지금~!  익숙한게 가장 무서운것이다', '1']\n"
      ]
     }
@@ -212,31 +220,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data:  [tensor([[   2, 1804, 6370,  ...,    1,    1,    1],\n",
-      "        [   2, 3257, 6005,  ...,    1,    1,    1],\n",
-      "        [   2,  837, 5666,  ...,    1,    1,    1],\n",
+      "Data:  [tensor([[   2, 3969, 6269,  ...,    1,    1,    1],\n",
+      "        [   2, 4698, 5404,  ...,    1,    1,    1],\n",
+      "        [   2, 4012, 1144,  ...,    1,    1,    1],\n",
       "        ...,\n",
       "        [   2, 4698, 5404,  ...,    1,    1,    1],\n",
-      "        [   2, 2781, 7216,  ...,    1,    1,    1],\n",
-      "        [   2, 3437, 5507,  ..., 1844, 7139,    3]], dtype=torch.int32), tensor([18, 34,  4, 13, 11, 31, 18, 14, 25, 11, 10, 60,  9, 42, 64, 32, 64, 13,\n",
-      "        18, 54, 11, 59, 25, 36, 17, 13,  6, 50, 25, 32, 17, 64],\n",
+      "        [   2, 4698, 5404,  ...,    1,    1,    1],\n",
+      "        [   2,  517, 5522,  ...,    1,    1,    1]], dtype=torch.int32), tensor([11, 16, 54,  7, 34, 30,  6, 17, 64, 19, 19,  4, 18, 28,  8, 27, 20, 40,\n",
+      "        31, 20, 22, 57, 27, 27, 23, 11, 28, 64, 13, 20, 37, 32],\n",
       "       dtype=torch.int32), tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
       "        ...,\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
-      "        [0, 0, 0,  ..., 0, 0, 0]], dtype=torch.int32), tensor([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 1, 0, 0], dtype=torch.int32)]\n",
-      "Waveform: tensor([[   2, 1804, 6370,  ...,    1,    1,    1],\n",
-      "        [   2, 3257, 6005,  ...,    1,    1,    1],\n",
-      "        [   2,  837, 5666,  ...,    1,    1,    1],\n",
+      "        [0, 0, 0,  ..., 0, 0, 0]], dtype=torch.int32), tensor([0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0], dtype=torch.int32)]\n",
+      "Waveform: tensor([[   2, 3969, 6269,  ...,    1,    1,    1],\n",
+      "        [   2, 4698, 5404,  ...,    1,    1,    1],\n",
+      "        [   2, 4012, 1144,  ...,    1,    1,    1],\n",
       "        ...,\n",
       "        [   2, 4698, 5404,  ...,    1,    1,    1],\n",
-      "        [   2, 2781, 7216,  ...,    1,    1,    1],\n",
-      "        [   2, 3437, 5507,  ..., 1844, 7139,    3]], dtype=torch.int32)\n",
-      "Sample rate: tensor([18, 34,  4, 13, 11, 31, 18, 14, 25, 11, 10, 60,  9, 42, 64, 32, 64, 13,\n",
-      "        18, 54, 11, 59, 25, 36, 17, 13,  6, 50, 25, 32, 17, 64],\n",
+      "        [   2, 4698, 5404,  ...,    1,    1,    1],\n",
+      "        [   2,  517, 5522,  ...,    1,    1,    1]], dtype=torch.int32)\n",
+      "Sample rate: tensor([11, 16, 54,  7, 34, 30,  6, 17, 64, 19, 19,  4, 18, 28,  8, 27, 20, 40,\n",
+      "        31, 20, 22, 57, 27, 27, 23, 11, 28, 64, 13, 20, 37, 32],\n",
       "       dtype=torch.int32)\n",
       "Labels: tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
@@ -289,14 +297,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15215/1906873263.py:5: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_4148/1906873263.py:5: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  for batch_id, (token_ids, valid_length, segment_ids, label) in enumerate(tqdm_notebook(train_dataloader)):\n"
      ]
@@ -304,12 +312,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8425cd3b0f442d796fc8a34cd72e48f",
+       "model_id": "79082e9e6ec8402f967364a57e32d0a9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -319,15 +327,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 batch id 1 loss 0.7290341258049011 train acc 0.46875\n",
-      "epoch 1 train acc 0.7714939024390244\n"
+      "epoch 1 batch id 1 loss 0.8761946558952332 train acc 0.28125\n",
+      "epoch 1 train acc 0.7569813829787234\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15215/1906873263.py:22: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_4148/1906873263.py:22: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  for batch_id, (token_ids, valid_length, segment_ids, label) in enumerate(tqdm_notebook(test_dataloader)):\n"
      ]
@@ -335,12 +343,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b1333e82e7a4a59a73f34d010743007",
+       "model_id": "b90fef7660e843d798d3e651b5ab395b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -350,18 +358,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 test acc 0.8794642857142857\n"
+      "epoch 1 test acc 0.86953125\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a537b998ad2c4412b6746fda02e2c3ef",
+       "model_id": "e2dfe9eb83594c6bab20fc7570b15168",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -371,19 +379,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2 batch id 1 loss 0.3613060712814331 train acc 0.875\n",
-      "epoch 2 train acc 0.9024390243902439\n"
+      "epoch 2 batch id 1 loss 0.28774595260620117 train acc 0.90625\n",
+      "epoch 2 train acc 0.9021498226950354\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbcc856ae2864f40a1b6d38506797424",
+       "model_id": "3f2493701b8c42d8bed03dd67481860a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -393,18 +401,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2 test acc 0.90625\n"
+      "epoch 2 test acc 0.9\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0c202949aec46698f402feef320bb3e",
+       "model_id": "aa82bae6011c41db8ce9722ca9c8dd3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -414,19 +422,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 3 batch id 1 loss 0.24932356178760529 train acc 0.9375\n",
-      "epoch 3 train acc 0.926829268292683\n"
+      "epoch 3 batch id 1 loss 0.27200767397880554 train acc 0.9375\n",
+      "epoch 3 train acc 0.9481382978723404\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1a57866bd4242dd81f331d928c6558f",
+       "model_id": "64bac1cedcc1485a9527df53f29c3b23",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -436,18 +444,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 3 test acc 0.9508928571428571\n"
+      "epoch 3 test acc 0.8921875\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea0a97c2bb8543969898a6d332d92d15",
+       "model_id": "e00ad7c5dc8d4bfeb77554584f4463b0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -457,19 +465,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4 batch id 1 loss 0.1547069549560547 train acc 0.9375\n",
-      "epoch 4 train acc 0.96875\n"
+      "epoch 4 batch id 1 loss 0.20310501754283905 train acc 0.9375\n",
+      "epoch 4 train acc 0.9744015957446809\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8320fa051c64cf7bb4fc0884e557581",
+       "model_id": "57c4779c09a74e64b16a5782d3fef827",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -479,18 +487,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4 test acc 0.9285714285714286\n"
+      "epoch 4 test acc 0.901953125\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bb8afdc1f1f4ad8ae751ab5de6ff656",
+       "model_id": "af231f153010466683f247d933d76093",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -500,19 +508,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 5 batch id 1 loss 0.01533831562846899 train acc 1.0\n",
-      "epoch 5 train acc 0.9862804878048781\n"
+      "epoch 5 batch id 1 loss 0.03388174995779991 train acc 0.96875\n",
+      "epoch 5 train acc 0.9910239361702128\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9025812fc3554b5da5d7cdae8c61f4c2",
+       "model_id": "a3b4f44e6d594cb797363f59fff10fb3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -522,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 5 test acc 0.9330357142857143\n"
+      "epoch 5 test acc 0.898046875\n"
      ]
     }
    ],
@@ -560,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -865,16 +873,16 @@
        ")"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.save(model_ourB.state_dict(), '../result/model/ourB_e5_0304.pt')  # 전체 모델 저장\n",
+    "#torch.save(model_ourB.state_dict(), '../result/model/ourB_e5_0307.pt')  # 전체 모델 저장\n",
     "\n",
     "ourB_model = BERTClassifier(bertmodel,  dr_rate=0.5).to(device)\n",
-    "ourB_model.load_state_dict(torch.load('../result/model/ourB_e5_0304.pt'))\n",
+    "ourB_model.load_state_dict(torch.load('../result/model/ourB_e5_0307.pt'))\n",
     "ourB_model.eval()"
    ]
   },
@@ -887,14 +895,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 53/53 [00:01<00:00, 30.58it/s]"
+      "100%|██████████| 53/53 [00:01<00:00, 33.19it/s]"
      ]
     },
     {
@@ -902,10 +910,10 @@
      "output_type": "stream",
      "text": [
       "size :  pred\n",
-      "0    1354\n",
-      "1     313\n",
+      "0    1330\n",
+      "1     337\n",
       "dtype: int64\n",
-      "acc :  0.7774445110977805\n"
+      "acc :  0.8086382723455309\n"
      ]
     },
     {
@@ -913,14 +921,6 @@
      "output_type": "stream",
      "text": [
       "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -944,6 +944,37 @@
     "comments_unseen['pred'] = pred\n",
     "print(\"size : \", comments_unseen.groupby('pred').size())\n",
     "print(\"acc : \", (comments_unseen['sentiment'] == comments_unseen['pred']).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.73802726515911"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import fbeta_score\n",
+    "\n",
+    "fbeta = fbeta_score(comments_unseen['sentiment'], comments_unseen['pred'], average='macro', beta = 2)\n",
+    "fbeta"
    ]
   }
  ],
