--- a/code/KoBERT_with_labeled.ipynb
+++ b/code/KoBERT_with_labeled.ipynb
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-04 17:48:42.774237: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
+      "2023-03-07 15:52:24.549007: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudart.so.11.0\n"
      ]
     }
    ],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -178,15 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['들어보니 노래로는 안되겠던데...', '0'] \n",
-      " ['가격 통제하면 공급은 줄어든다. 경제학원론 교과서에 있는 내용인데 뭐... 분양가 상한제는 밀은 뻔지르하지만 본질적으로가격통제 정책이지. 공급은 줄어들 수 밖에', '0'] \n",
+      "['재밌나? 예능을 안 봐서', '0'] \n",
+      " ['가장 신뢰성이 가는 데이타이다.', '1'] \n",
       " ['공산당이야 뭐야 중국처럼되고싶어?', '0']\n"
      ]
     }
@@ -201,38 +201,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data:  [tensor([[   2, 1804, 6370,  ...,    1,    1,    1],\n",
-      "        [   2, 3257, 6005,  ...,    1,    1,    1],\n",
-      "        [   2,  837, 5666,  ...,    1,    1,    1],\n",
+      "Data:  [tensor([[   2, 3969, 6269,  ...,    1,    1,    1],\n",
+      "        [   2, 1492,  517,  ...,    1,    1,    1],\n",
+      "        [   2, 4012, 1144,  ...,    1,    1,    1],\n",
       "        ...,\n",
-      "        [   2,  517, 6757,  ...,    1,    1,    1],\n",
-      "        [   2, 2781, 7216,  ...,    1,    1,    1],\n",
-      "        [   2, 3437, 5507,  ..., 7836, 1844,    3]], dtype=torch.int32), tensor([18, 34,  4, 13, 12, 30, 18, 15, 29, 11, 11, 60, 10, 44, 64, 32, 64, 13,\n",
-      "        18, 54, 11, 59, 25, 36, 16, 13,  5, 50, 25, 35, 18, 64],\n",
+      "        [   2, 2010, 6364,  ...,    1,    1,    1],\n",
+      "        [   2,  517, 7922,  ...,    1,    1,    1],\n",
+      "        [   2,  517, 5522,  ...,    1,    1,    1]], dtype=torch.int32), tensor([11, 15, 55,  7, 34, 30,  6, 17, 64, 19, 19,  4, 18, 28,  8, 27, 20, 40,\n",
+      "        31, 20, 22, 57, 27, 27, 23, 10, 29, 64, 13, 22, 38, 32],\n",
       "       dtype=torch.int32), tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
       "        ...,\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
-      "        [0, 0, 0,  ..., 0, 0, 0]], dtype=torch.int32), tensor([0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0,\n",
-      "        0, 0, 0, 0, 0, 1, 0, 0], dtype=torch.int32)]\n",
-      "Waveform: tensor([[   2, 1804, 6370,  ...,    1,    1,    1],\n",
-      "        [   2, 3257, 6005,  ...,    1,    1,    1],\n",
-      "        [   2,  837, 5666,  ...,    1,    1,    1],\n",
+      "        [0, 0, 0,  ..., 0, 0, 0]], dtype=torch.int32), tensor([0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+      "        0, 0, 0, 0, 0, 0, 0, 0], dtype=torch.int32)]\n",
+      "Waveform: tensor([[   2, 3969, 6269,  ...,    1,    1,    1],\n",
+      "        [   2, 1492,  517,  ...,    1,    1,    1],\n",
+      "        [   2, 4012, 1144,  ...,    1,    1,    1],\n",
       "        ...,\n",
-      "        [   2,  517, 6757,  ...,    1,    1,    1],\n",
-      "        [   2, 2781, 7216,  ...,    1,    1,    1],\n",
-      "        [   2, 3437, 5507,  ..., 7836, 1844,    3]], dtype=torch.int32)\n",
-      "Sample rate: tensor([18, 34,  4, 13, 12, 30, 18, 15, 29, 11, 11, 60, 10, 44, 64, 32, 64, 13,\n",
-      "        18, 54, 11, 59, 25, 36, 16, 13,  5, 50, 25, 35, 18, 64],\n",
+      "        [   2, 2010, 6364,  ...,    1,    1,    1],\n",
+      "        [   2,  517, 7922,  ...,    1,    1,    1],\n",
+      "        [   2,  517, 5522,  ...,    1,    1,    1]], dtype=torch.int32)\n",
+      "Sample rate: tensor([11, 15, 55,  7, 34, 30,  6, 17, 64, 19, 19,  4, 18, 28,  8, 27, 20, 40,\n",
+      "        31, 20, 22, 57, 27, 27, 23, 10, 29, 64, 13, 22, 38, 32],\n",
       "       dtype=torch.int32)\n",
       "Labels: tensor([[0, 0, 0,  ..., 0, 0, 0],\n",
       "        [0, 0, 0,  ..., 0, 0, 0],\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11968/3713612706.py:5: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_6741/3713612706.py:5: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  for batch_id, (token_ids, valid_length, segment_ids, label) in enumerate(tqdm_notebook(train_dataloader)):\n"
      ]
@@ -298,12 +298,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e71ee5e341aa471aa2ea5a689a8a478f",
+       "model_id": "51fd421f0566421fa419592863080ffd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -313,15 +313,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 batch id 1 loss 0.8451824188232422 train acc 0.3125\n",
-      "epoch 1 train acc 0.717530487804878\n"
+      "epoch 1 batch id 1 loss 0.5861780047416687 train acc 0.6875\n",
+      "epoch 1 train acc 0.8055186170212766\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_11968/3713612706.py:22: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "/tmp/ipykernel_6741/3713612706.py:22: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
       "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
       "  for batch_id, (token_ids, valid_length, segment_ids, label) in enumerate(tqdm_notebook(test_dataloader)):\n"
      ]
@@ -329,12 +329,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d284984a4c9241e184d0edaf54524ce9",
+       "model_id": "a1c1a3ef6d4b46319f497689f4868582",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -344,18 +344,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 test acc 0.8526785714285714\n"
+      "epoch 1 test acc 0.86953125\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7cf0245120c46c68a9128c840076058",
+       "model_id": "e12e3bb82aaa43b0aa20345489699092",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -365,19 +365,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2 batch id 1 loss 0.5032402276992798 train acc 0.84375\n",
-      "epoch 2 train acc 0.8926829268292683\n"
+      "epoch 2 batch id 1 loss 0.37917205691337585 train acc 0.8125\n",
+      "epoch 2 train acc 0.9132313829787234\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee9e307993d14f5e9c263ffb3ec91564",
+       "model_id": "486ecf0553b9466b947cebd24509cde2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -387,18 +387,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 2 test acc 0.9285714285714286\n"
+      "epoch 2 test acc 0.898828125\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3c37c2efd164c2081225ef418fceeac",
+       "model_id": "f542471a241f4119bc00c677e9166b42",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -408,19 +408,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 3 batch id 1 loss 0.4014902114868164 train acc 0.90625\n",
-      "epoch 3 train acc 0.946189024390244\n"
+      "epoch 3 batch id 1 loss 0.2248755693435669 train acc 0.9375\n",
+      "epoch 3 train acc 0.9627659574468085\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5d5c75bb15b48f6a60133fbc07b3c9d",
+       "model_id": "db670e7513a54b23aa3f19bf5cf4a405",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -430,18 +430,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 3 test acc 0.9553571428571429\n"
+      "epoch 3 test acc 0.89609375\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0abfb389ea5a4b89aa28219692770855",
+       "model_id": "fef39e65650a4b9e8e0ae5d2c66395cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -451,19 +451,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4 batch id 1 loss 0.14226555824279785 train acc 0.96875\n",
-      "epoch 4 train acc 0.9832317073170732\n"
+      "epoch 4 batch id 1 loss 0.16457828879356384 train acc 0.96875\n",
+      "epoch 4 train acc 0.9847074468085106\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93959997abdc4638ba1377d5aa582509",
+       "model_id": "acc997aa1ca14c089f0cb009203d63a9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -473,18 +473,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 4 test acc 0.9419642857142857\n"
+      "epoch 4 test acc 0.90078125\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4018c04c4a75486bb114940137a8aef1",
+       "model_id": "2d9b417292af494a985db71e095b2d96",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/41 [00:00<?, ?it/s]"
+       "  0%|          | 0/94 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -494,19 +494,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 5 batch id 1 loss 0.008978940546512604 train acc 1.0\n",
-      "epoch 5 train acc 0.9870426829268293\n"
+      "epoch 5 batch id 1 loss 0.28003960847854614 train acc 0.9375\n",
+      "epoch 5 train acc 0.9920212765957447\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3356f0fc4b9f4ccb9db78c64e78c239f",
+       "model_id": "20e2f48d252d4b6ebaa3febfc8b4bb08",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/7 [00:00<?, ?it/s]"
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -516,7 +516,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 5 test acc 0.9464285714285714\n"
+      "epoch 5 test acc 0.894921875\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -859,16 +859,16 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.save(model_ourA.state_dict(), '../result/model/ourA_e5_0304.pt')  # 전체 모델 저장\n",
+    "#torch.save(model_ourA.state_dict(), '../result/model/ourA_e5_0307.pt')  # 전체 모델 저장\n",
     "\n",
     "ourA_model = BERTClassifier(bertmodel,  dr_rate=0.5).to(device)\n",
-    "ourA_model.load_state_dict(torch.load('../result/model/ourA_e5_0304.pt'))\n",
+    "ourA_model.load_state_dict(torch.load('../result/model/ourA_e5_0307.pt'))\n",
     "ourA_model.eval()"
    ]
   },
@@ -881,14 +881,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 53/53 [00:01<00:00, 29.24it/s]\n"
+      "100%|██████████| 53/53 [00:01<00:00, 31.11it/s]"
      ]
     },
     {
@@ -896,18 +896,17 @@
      "output_type": "stream",
      "text": [
       "pred\n",
-      "0    1440\n",
-      "1     227\n",
+      "0    1402\n",
+      "1     265\n",
       "dtype: int64\n",
-      "0.7546490701859628\n"
+      "0.7978404319136173\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -930,6 +929,37 @@
     "comments_unseen['pred'] = pred\n",
     "print(comments_unseen.groupby('pred').size())\n",
     "print((comments_unseen['sentiment'] == comments_unseen['pred']).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.706172656823737"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import fbeta_score\n",
+    "\n",
+    "fbeta = fbeta_score(comments_unseen['sentiment'], comments_unseen['pred'], average='macro', beta = 2)\n",
+    "fbeta"
    ]
   }
  ],
